fix the issue of content overlapping with graph plot

--- a/src/App.scss
+++ b/src/App.scss
@@ -2274,7 +2274,7 @@ input.switch:checked::after {
     border-radius: 5px;
     margin-bottom: 1rem;
     height: 10rem;
-    padding-left: 2.2rem;
+    padding-left: 2.6rem;
 
     svg {
       width: 100%;
